website/versioned_docs/version-0.8/webview.md
---
id: version-0.8-webview
title: WebView
original_id: webview
---

### Props

* [`renderError`](webview.md#rendererror)
* [`automaticallyAdjustContentInsets`](webview.md#automaticallyadjustcontentinsets)
* [`contentInset`](webview.md#contentinset)
* [`html`](webview.md#html)
* [`injectedJavaScript`](webview.md#injectedjavascript)
* [`javaScriptEnabledAndroid`](webview.md#javascriptenabledandroid)
* [`onNavigationStateChange`](webview.md#onnavigationstatechange)
* [`bounces`](webview.md#bounces)
* [`renderLoading`](webview.md#renderloading)
* [`scalesPageToFit`](webview.md#scalespagetofit)
* [`scrollEnabled`](webview.md#scrollenabled)
* [`startInLoadingState`](webview.md#startinloadingstate)
* [`style`](webview.md#style)
* [`url`](webview.md#url)

### Methods

* [`goForward`](webview.md#goforward)
* [`goBack`](webview.md#goback)
* [`reload`](webview.md#reload)
* [`updateNavigationState`](webview.md#updatenavigationstate)
* [`getWebViewHandle`](webview.md#getwebviewhandle)
* [`onLoadingStart`](webview.md#onloadingstart)
* [`onLoadingError`](webview.md#onloadingerror)
* [`onLoadingFinish`](webview.md#onloadingfinish)

---

# Reference

## Props

### `renderError`

| Type     | Required |
| -------- | -------- |
| function | No       |

---

### `automaticallyAdjustContentInsets`

| Type | Required |
| ---- | -------- |
| bool | No       |

---

### `contentInset`

| Type                                                               | Required |
| ------------------------------------------------------------------ | -------- |
| object: {top: number, left: number, bottom: number, right: number} | No       |

---

### `html`

| Type   | Required |
| ------ | -------- |
| string | No       |

---

### `injectedJavaScript`

Sets the JS to be injected when the webpage loads.

| Type   | Required |
| ------ | -------- |
| string | No       |

---

### `javaScriptEnabledAndroid`

Used for android only, JS is enabled by default for WebView on iOS

| Type | Required |
| ---- | -------- |
| bool | No       |

---

### `onNavigationStateChange`

| Type     | Required |
| -------- | -------- |
| function | No       |

---

### `bounces`

| Type | Required |
| ---- | -------- |
| bool | No       |

---

### `renderLoading`

| Type     | Required |
| -------- | -------- |
| function | No       |

---

### `scalesPageToFit`

Used for iOS only, sets whether the webpage scales to fit the view and the user can change the scale

| Type | Required |
| ---- | -------- |
| bool | No       |

---

### `scrollEnabled`

| Type | Required |
| ---- | -------- |
| bool | No       |

---

### `startInLoadingState`

| Type | Required |
| ---- | -------- |
| bool | No       |

---

### `style`

| Type                  | Required |
| --------------------- | -------- |
| [View](view.md#style) | No       |

---

### `url`

| Type   | Required |
| ------ | -------- |
| string | No       |

## Methods

### `goForward()`

```javascript
goForward();
```

---

### `goBack()`

```javascript
goBack();
```

---

### `reload()`

```javascript
reload();
```

---

### `updateNavigationState()`

```javascript
updateNavigationState((event: Event));
```

We return an event with a bunch of fields including: url, title, loading, canGoBack, canGoForward

---

### `getWebViewHandle()`

```javascript
getWebViewHandle():
```

---

### `onLoadingStart()`

```javascript
onLoadingStart((event: Event));
```

---

### `onLoadingError()`

```javascript
onLoadingError((event: Event));
```

---

### `onLoadingFinish()`

```javascript
onLoadingFinish((event: Event));
```
